--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -1,1 +1,15 @@
-<p>markers-page works!</p>
+<div #map id="map"></div>
+
+<ul class="list-group">
+	<li class="list-group-item" *ngFor="let colorMarker of markers; let i = index"
+	[ngStyle]="{ 'background-color': colorMarker.color }"
+	(dblclick)="deleteMarker(i)"
+	(click)="flyTo(colorMarker.marker)"
+	>
+		Marker {{ i + 1 }}
+	</li>
+</ul>
+
+<button class="btn btn-primary" (click)="createMarker()">
+	+ Agregar marcador
+</button>
